# thesis_analysis_plotting

./: Dockerfile  README.md  app.py  cloudbuild.yaml  incremental_training_experiment.py  pyproject.toml  requirements.txt
config_files/: config_local_export_models.json
pf_analysis/experiments/: configuration_experiments.py  data_experiments.py  incremental_training_experiment.py  model.json
pf_analysis/experiments/config_files/: config_local.json  config_local_export_models.json  config_local_full.json
pf_analysis/plots/: data_quantity_analysis.py
